# safetybench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_evaluation.py  cross_market_comparison.py
safetybench/: __init__.py  cli.py
safetybench/evaluation/: __init__.py  comparator.py  runner.py  thresholds.py
safetybench/generators/: __init__.py  distributions.py  synthetic.py
safetybench/metrics/: __init__.py  detection.py  latency.py  quality.py  statistical.py
safetybench/reports/: __init__.py  csv_export.py  html.py  markdown.py
safetybench/templates/: report.html
tests/: test_evaluation.py  test_generators.py  test_metrics.py  test_reports.py
