[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safetybench"
version = "0.1.0"
description = "Benchmarking Content Moderation at Scale"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Remi Ounadjela", email = "remi.ounadjela@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["content-moderation", "trust-safety", "benchmarking", "machine-learning", "evaluation"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "click>=8.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
safetybench = "safetybench.cli:cli"

[project.urls]
Homepage = "https://github.com/RemiOunadjela/safetybench"
Repository = "https://github.com/RemiOunadjela/safetybench"
Issues = "https://github.com/RemiOunadjela/safetybench/issues"

[tool.setuptools.packages.find]
include = ["safetybench*"]

[tool.setuptools.package-data]
safetybench = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
